--- a/Twitter/Views/User/Register.cshtml
+++ b/Twitter/Views/User/Register.cshtml
@@ -13,12 +13,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="userName" class="control-label">User Name</label>
-                <input asp-for="userName" class="form-control" placeholder="Enter User Name"/>
+                <input asp-for="userName" class="form-control" placeholder="Enter User Name" />
                 <span asp-validation-for="userName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="name" class="control-label">Full Name</label>
-                <input asp-for="name" class="form-control" placeholder="Enter Full Name"/>
+                <input asp-for="name" class="form-control" placeholder="Enter Full Name" />
                 <span asp-validation-for="name" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -28,7 +28,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="password" class="control-label">Password</label>
-                <input asp-for="password" type="password" class="form-control" placeholder="Enter Password"/>
+                <input asp-for="password" type="password" class="form-control" placeholder="Enter Password" />
                 <span asp-validation-for="password" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -36,12 +36,16 @@
             </div>
         </form>
     </div>
-     <div class="col-md-3"></div>
+    <div class="col-md-3"></div>
 </div>
 
 <div style="text-align: center;">
     <a asp-action="SignIn">Already having account? Sign In</a>
 </div>
+@if (ViewBag.Message != null)
+{
+    <script>alert("@ViewBag.Message");</script>
+}
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
