--- a/Twitter/Views/User/SignIn.cshtml
+++ b/Twitter/Views/User/SignIn.cshtml
@@ -7,13 +7,13 @@
 <h5>Sign In</h5>
 <hr />
 <div class="row">
-     <div class="col-md-2"></div>
+    <div class="col-md-2"></div>
     <div class="col-md-8">
         <form asp-action="SignIn">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="userName" class="control-label">User Name</label>
-                <input asp-for="userName" class="form-control" placeholder="Enter User Name/Email" required/>
+                <input asp-for="userName" class="form-control" placeholder="Enter User Name/Email" required />
                 <span asp-validation-for="userName" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -26,8 +26,17 @@
             </div>
         </form>
     </div>
-      <div class="col-md-2"></div>
+    <div class="col-md-2"></div>
 </div>
+
+@if (ViewBag.Message != null)
+{
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4"> <label style="color:red">@ViewBag.Message</label></div>
+        <div class="col-md-4"></div>
+    </div>
+}
 
 <div style="text-align: center;">
     <a asp-action="Register">Don't have account? Sign up</a>
